--- a/manifest.json
+++ b/manifest.json
@@ -37,6 +37,7 @@
     "gecko": {
       "id": "techpriest@gurglorium.com",
       "strict_min_version": "143.0.1"
+      "data_collection_permissions": []
     }
   }
 }
