--- a/manifest.json
+++ b/manifest.json
@@ -36,7 +36,7 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "techpriest@gurglorium.com",
-      "strict_min_version": "143.0.1"
+      "strict_min_version": "143.0.1",
       "data_collection_permissions": []
     }
   }
