Added required field to "data_collection_permissions" to manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,9 @@
     "gecko": {
       "id": "techpriest@gurglorium.com",
       "strict_min_version": "143.0.1",
-      "data_collection_permissions": {}
+      "data_collection_permissions": {
+        "required": false
+      }
     }
   }
 }
