--- a/manifest.json
+++ b/manifest.json
@@ -38,7 +38,7 @@
       "id": "techpriest@gurglorium.com",
       "strict_min_version": "143.0.1",
       "data_collection_permissions": {
-        "required": false
+        "required": []
       }
     }
   }
