--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Produktbild-samlare",
+  "name": "Product Image Scraper",
   "version": "0.8.0",
   "description": "Hittar högupplösta produktbilder i gallerier/lightboxar och sparar 1000x1000 JPG.",
   "permissions": [
@@ -36,7 +36,7 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "techpriest@gurglorium.com",
-      "strict_min_version": "143.0.1",
+      "strict_min_version": "140.0",
       "data_collection_permissions": {
         "required": ["none"]
       }
