--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Product Image Scraper",
-  "version": "0.9.0",
+  "version": "0.8.0",
   "description": "Hittar högupplösta produktbilder i gallerier/lightboxar och sparar 1000x1000 JPG.",
   "permissions": [
     "storage",
@@ -22,27 +22,24 @@
     "default_popup": "popup/popup.html"
   },
   "background": {
-    "scripts": [
-      "background.js"
-    ]
+    "scripts": ["background.js"]
   },
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
+      "matches": ["<all_urls>"],
       "all_frames": true,
       "match_about_blank": true,
       "run_at": "document_idle",
-      "js": [
-        "contentScript.js"
-      ]
+      "js": ["contentScript.js"]
     }
   ],
   "browser_specific_settings": {
     "gecko": {
       "id": "techpriest@gurglorium.com",
-      "strict_min_version": "142.0"
+      "strict_min_version": "142.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
     }
   }
 }
